Fix speed dial z-index

--- a/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
+++ b/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
@@ -130,7 +130,7 @@
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.14);
-    // z-index: 1000;
+    z-index: 1000;
 
     .MuiSpeedDial-root {
       position: absolute;
