--- a/src/components/CaloriesProgress/styles/CaloriesProgress.scss
+++ b/src/components/CaloriesProgress/styles/CaloriesProgress.scss
@@ -18,8 +18,10 @@
   }
 
   .goal-container {
-    display: flex;
-    align-items: center;
+    align-self: center;
+    // display: flex;
+    // align-items: center;
+
     // justify-content: space-between;
   }
 
